# KHE_Public--Windows-Application

./: .gitignore  CMakeLists.txt  README.md
Project_Documantion/Project_Destination/: About_Project.md
Project_Documantion/Project_Notes/: Take_Build.md  Version
Project_Documantion/Prompts/: Shortcuts.md
src/: AddPathDialog.cpp  AddPathDialog.h  AppContext.h  Controls.cpp  Controls.h  Dashboard.cpp  Dashboard.h  Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  Models.h  NoteEditorDialog.cpp  NoteEditorDialog.h  NoteViewerPage.cpp  NoteViewerPage.h  NotesPage.cpp  NotesPage.h  PathsPage.cpp  PathsPage.h  QuickLaunch.cpp  QuickLaunch.h  SettingsPage.cpp  SettingsPage.h  Theme.cpp  Theme.h  Utils.cpp  Utils.h  app.manifest  main.cpp  resource.h  resources.rc
